@@ -4,9 +4,9 @@ pkginclude_HEADERS = gsl_linalg.h
 
 AM_CPPFLAGS = -I$(top_srcdir)
 
-libgsllinalg_la_SOURCES = cod.c condest.c invtri.c multiply.c exponential.c tridiag.c tridiag.h lu.c luc.c hh.c qr.c qrpt.c lq.c ptlq.c svd.c householder.c householdercomplex.c hessenberg.c hesstri.c cholesky.c choleskyc.c mcholesky.c pcholesky.c cholesky_band.c symmtd.c hermtd.c bidiag.c balance.c balancemat.c inline.c
+libgsllinalg_la_SOURCES = cod.c condest.c invtri.c multiply.c exponential.c tridiag.c tridiag.h lu.c luc.c hh.c qr.c qrpt.c lq.c ptlq.c svd.c householder.c householdercomplex.c hessenberg.c hesstri.c cholesky.c choleskyc.c mcholesky.c pcholesky.c cholesky_band.c ldlt.c symmtd.c hermtd.c bidiag.c balance.c balancemat.c inline.c
 
-noinst_HEADERS = apply_givens.c cholesky_common.c svdstep.c tridiag.h test_cholesky.c test_cod.c test_common.c test_lq.c
+noinst_HEADERS = apply_givens.c cholesky_common.c svdstep.c tridiag.h test_cholesky.c test_cod.c test_common.c test_ldlt.c test_lq.c
 
 TESTS = $(check_PROGRAMS)
 
